Fixed: nav bar no longer covers sidebar

--- a/Client/Screen_Name/me/style.styl
+++ b/Client/Screen_Name/me/style.styl
@@ -65,9 +65,6 @@ div.col
 
 #Session_Nav
   background: #fff
-  position: absolute
-  top: 0
-  right: 0
 
 
 div.box
